==> acosding/STM32F407ZGT6-TEMP---V1/Core/Src/st7735.c <==
#include "st7735.h"
#include "stdlib.h"
#define TFT_BL_H()	HAL_GPIO_WritePin(ST7735_BL_GPIO_Port,ST7735_BL_Pin,GPIO_PIN_SET);
#define TFT_BL_L()	HAL_GPIO_WritePin(ST7735_BL_GPIO_Port,ST7735_BL_Pin,GPIO_PIN_RESET);
#define TFT_CS_H()	HAL_GPIO_WritePin(ST7735_CS_GPIO_Port,ST7735_CS_Pin,GPIO_PIN_SET);
#define TFT_CS_L()	HAL_GPIO_WritePin(ST7735_CS_GPIO_Port,ST7735_CS_Pin,GPIO_PIN_RESET);
#define TFT_DC_D()	HAL_GPIO_WritePin(ST7735_DC_GPIO_Port,ST7735_DC_Pin,GPIO_PIN_SET);
#define TFT_DC_C()	HAL_GPIO_WritePin(ST7735_DC_GPIO_Port,ST7735_DC_Pin,GPIO_PIN_RESET);
#define TFT_RES_H()	HAL_GPIO_WritePin(ST7735_RES_GPIO_Port,ST7735_RES_Pin,GPIO_PIN_SET);
#define TFT_RES_L()	HAL_GPIO_WritePin(ST7735_RES_GPIO_Port,ST7735_RES_Pin,GPIO_PIN_RESET);
#define ST7735_COLOR565(r, g, b) (((r & 0xF8) << 8) | ((g & 0xFC) << 3) | ((b & 0xF8) >> 3))
#define SWAP_INT16_T(a, b) { int16_t t = a; a = b; b = t; }
#define DELAY 0x80

static void ST7735_WriteCommand(uint8_t cmd)
{
    TFT_DC_C();
    /*
    #ifdef USE_SPI_DMA
      completed1 = 0;
    	HAL_SPI_Transmit_DMA(&ST7735_SPI_PORT, &cmd, sizeof(cmd));
    	//while(hspi1.State == HAL_SPI_STATE_BUSY_TX);
    #else*/
    HAL_SPI_Transmit(&ST7735_SPI_PORT, &cmd, sizeof(cmd), HAL_MAX_DELAY);
//#endif
}

static void ST7735_WriteData(uint8_t* buff, size_t buff_size)
{
    TFT_DC_D();
#ifdef USE_SPI_DMA
    HAL_SPI_Transmit_DMA(&ST7735_SPI_PORT, buff, buff_size);
    while(hspi1.State == HAL_SPI_STATE_BUSY_TX);
#else
    HAL_SPI_Transmit(&ST7735_SPI_PORT, buff, buff_size, HAL_MAX_DELAY);
#endif
}

void ST7735_FillRectangle(uint16_t x, uint16_t y, uint16_t w, uint16_t h, uint16_t color)
{
    // clipping
    if((x >= _width) || (y >= _height))
        return;
    if((x + w - 1) >= _width)
        w = _width - x;
    if((y + h - 1) >= _height)
        h = _height - y;

    TFT_CS_L();
    ST7735_SetAddressWindow(x, y, x + w - 1, y + h - 1);

    uint8_t data[2] = { color >> 8, color & 0xFF };
    TFT_DC_D();

#ifdef USE_SPI_DMA
    uint8_t tbuf[w * 2];
    for(y = h; y > 0; y--)
    {
        for(int x = w * 2; x >= 0; x -= 2)
        {
            tbuf[x] = data[0];
            tbuf[x + 1] = data[1];
        }
        HAL_SPI_Transmit_DMA(&ST7735_SPI_PORT, tbuf, sizeof(tbuf));
        while(hspi1.State == HAL_SPI_STATE_BUSY_TX)
        {
        };
    }
#else
    for(y = h; y > 0; y--)
    {
        for(x = w; x > 0; x--)
        {
            HAL_SPI_Transmit(&ST7735_SPI_PORT, data, sizeof(data), HAL_MAX_DELAY);
        }
    }
#endif

    TFT_CS_H();
}
